--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,6 +1,13 @@
 <h1 class="title">Score</h1>
 
 <div class="message">
+    <section class="score text-center">
+        <p>Score
+            <span class="score--blue">
+                <%= @score %>
+            </span>
+        </p>
+    </section>
     <div class="message__display">
     <%= @message %>
     </div>
